# film-client

./: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  client.cpp  client.h  message.h  observable.cpp  observable.h  server.cpp  server.h  write.cpp  write.h  writer.cpp  writer.h
gui/: CMakeLists.txt  gui.cpp  gui.h  worker.cpp  worker.h
network/: constants.h
